css/main.css
body{
    margin:1%;
}

#paginone{
    width: 80%;
    left: 10%;
    position: relative;
    -webkit-box-shadow: 0px 0px 30px 3px rgba(49, 50, 50, 0.8);
    -moz-box-shadow:    0px 0px 30px 3px rgba(49, 50, 50, 0.8);
    box-shadow:         0px 0px 30px 3px rgba(49, 50, 50, 0.8);
    padding: 2%;
    min-height:80%;
}

#fixedSideMenu{
	float:right;
}

#showMenuButton{
	display: none;
}


#showMenuButton:checked + label #hiddenMenu{
	display:block;
}

#hiddenMenuContainer{
	float: right;
}

#hiddenMenu{
	clear: both;
	display:none;
}

#fixedSideMenuContent{
	position:absolute;
	right:0;
	display:table;
	background-color: white;
	border: 1px gray solid;
	list-style: none;
}

#content{
}

#upperBanner{
    width:100%
}

#btnMenu{
	float:right;
}

.center {        
    display:block;
    margin-left:auto;
    margin-right:auto;
}

ul {
	list-style: square inside none;
}

h1 {
	font-size: 30px;
	margin:0 auto;
	margin-bottom:10px;
}

h2 {
	font-size: 23px;
}

.postListLink{
	font-size: 13px;
}

.postListDate{
	font-size: 10px;
}

